--- a/src/TriviaClient/Components/StartTriviaComponent.razor
+++ b/src/TriviaClient/Components/StartTriviaComponent.razor
@@ -1,6 +1,8 @@
 ﻿<p>What's your name?</p>
 <input @bind="PlayerName" />
-<button class="btn btn-primary" @onclick="@(() => OnClick.InvokeAsync(PlayerName))" />
+<button class="btn btn-primary" @onclick="@(() => OnClick.InvokeAsync(PlayerName))" >
+    Start!    
+</button>
 
 
 @code {
