--- a/src/TriviaClient/Pages/PlayTrivia.razor
+++ b/src/TriviaClient/Pages/PlayTrivia.razor
@@ -34,6 +34,9 @@
         Started = true;
         await InvokeAsync(() => base.StateHasChanged());
 
+        var metadata = new Metadata();
+        metadata.Add("PlayerName", Player.Name);
+        metadata.Add("GameID", Game.GameID);
         Call = TriviaClient.PlayTrivia();
 
         _ = Task.Run(async () =>
