--- a/src/TriviaClient/Components/QuestionComponent.razor
+++ b/src/TriviaClient/Components/QuestionComponent.razor
@@ -7,7 +7,7 @@
         @for (int i = 0; i < Question.Answers.Count; i++)
         {
             <li>
-                <button class="btn btn-primary" @onclick="@(() => OnClick.InvokeAsync(i))">
+                <button class="btn btn-primary" @onclick="@(() => OnClick.InvokeAsync(new TriviaAnswer { QuestionID = Question.QuestionID, Answer = i}))">
                     @Question.Answers[i]
                 </button>
             </li>
@@ -20,6 +20,7 @@
     public TriviaQuestion Question { get; set; }
 
     [Parameter]
-    public EventCallback<int> OnClick { get; set; }
+    public EventCallback<TriviaAnswer> OnClick { get; set; }
+
 
 }
