--- a/src/TriviaClient/Pages/PlayTrivia.razor
+++ b/src/TriviaClient/Pages/PlayTrivia.razor
@@ -25,7 +25,6 @@
     private TriviaQuestion Question { get; set; }
     private int Score { get; set; }
 
-
     // Game mechanics
     private GameState State { get; set; } = GameState.Initial;
     private int PendingQuestions { get; set; }
@@ -45,7 +44,7 @@
     private async Task SendStartTrivia(string name)
     {
         State = GameState.WaitingForPlayers;
-        await InvokeAsync(() => base.StateHasChanged());
+        StateHasChanged();
 
         var player = new Player { Name = name };
         var game = await TriviaClient.StartTriviaAsync(player);
@@ -71,13 +70,12 @@
         await Call.RequestStream.CompleteAsync();
         await readTask;
 
-        Question = null;
-
         var result = await TriviaClient.TriviaScoreAsync(new TriviaSession { Game = game, Player = player });
         Score = result.Score;
         State = GameState.GameEnded;
+        Question = null;
 
-        await InvokeAsync(() => base.StateHasChanged());
+        StateHasChanged();
     }
 
     private async Task SendAnswer(TriviaAnswer answer)
@@ -100,5 +98,4 @@
     {
         Call?.Dispose();
     }
-
 }
