--- a/src/TriviaClient/Shared/NavMenu.razor
+++ b/src/TriviaClient/Shared/NavMenu.razor
@@ -17,6 +17,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Play Trivia
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="crash">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Crash
+            </NavLink>
+        </li>
     </ul>
 </div>
 
